<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kaban.titanium.atmmachine.AtmSettingsActivity">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bills_count"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/bill_200"/>

            <EditText
                android:id="@+id/settings_200"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/bill_100"/>

            <EditText
                android:id="@+id/settings_100"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/bill_50"/>

            <EditText
                android:id="@+id/settings_50"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/bill_20"/>

            <EditText
                android:id="@+id/settings_20"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/bill_10"/>

            <EditText
                android:id="@+id/settings_10"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/bill_5"/>

            <EditText
                android:id="@+id/settings_5"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/bill_1"/>

            <EditText
                android:id="@+id/settings_1"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/set_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/set_settings"/>

</LinearLayout>
